src/parsers/Privug/PrivugSOGAParser.py
# Generated from PrivugSOGA.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PrivugSOGAParser ( Parser ):

    grammarFileName = "PrivugSOGA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'data'", "'='", "'array['", "']'", 
                     "'skip'", "'+'", "'-'", "'*'", "'end if'", "'if'", 
                     "':'", "'else'", "'<'", "'<='", "'>='", "'>'", "'=='", 
                     "'!='", "'prune('", "')'", "'observe('", "'for'", "'in range('", 
                     "'end for'", "'^2'", "'['", "'gm('", "','", "'uniform('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDV", "NUM", 
                      "COMM", "WS", "DIGIT" ]

    RULE_progr = 0
    RULE_data = 1
    RULE_array = 2
    RULE_instr = 3
    RULE_assignment = 4
    RULE_const = 5
    RULE_const_term = 6
    RULE_add = 7
    RULE_add_term = 8
    RULE_mul = 9
    RULE_conditional = 10
    RULE_ifclause = 11
    RULE_elseclause = 12
    RULE_block = 13
    RULE_bexpr = 14
    RULE_lexpr = 15
    RULE_monom = 16
    RULE_prune = 17
    RULE_observe = 18
    RULE_loop = 19
    RULE_expr = 20
    RULE_vars = 21
    RULE_idd = 22
    RULE_symvars = 23
    RULE_gm = 24
    RULE_uniform = 25
    RULE_list = 26

    ruleNames =  [ "progr", "data", "array", "instr", "assignment", "const", 
                   "const_term", "add", "add_term", "mul", "conditional", 
                   "ifclause", "elseclause", "block", "bexpr", "lexpr", 
                   "monom", "prune", "observe", "loop", "expr", "vars", 
                   "idd", "symvars", "gm", "uniform", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    IDV=31
    NUM=32
    COMM=33
    WS=34
    DIGIT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.DataContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.DataContext,i)


        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.InstrContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.InstrContext,i)


        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.ArrayContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.ArrayContext,i)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)




    def progr(self):

        localctx = PrivugSOGAParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 54
                    self.data()
                    self.state = 55
                    self.match(PrivugSOGAParser.T__0) 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrivugSOGAParser.T__3) | (1 << PrivugSOGAParser.T__5) | (1 << PrivugSOGAParser.T__10) | (1 << PrivugSOGAParser.T__19) | (1 << PrivugSOGAParser.T__21) | (1 << PrivugSOGAParser.T__22) | (1 << PrivugSOGAParser.IDV))) != 0):
                self.state = 68
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PrivugSOGAParser.T__5, PrivugSOGAParser.T__10, PrivugSOGAParser.T__19, PrivugSOGAParser.T__21, PrivugSOGAParser.T__22, PrivugSOGAParser.IDV]:
                    self.state = 62
                    self.instr()
                    self.state = 63
                    self.match(PrivugSOGAParser.T__0)
                    pass
                elif token in [PrivugSOGAParser.T__3]:
                    self.state = 65
                    self.array()
                    self.state = 66
                    self.match(PrivugSOGAParser.T__0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(PrivugSOGAParser.SymvarsContext,0)


        def list_(self):
            return self.getTypedRuleContext(PrivugSOGAParser.ListContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)




    def data(self):

        localctx = PrivugSOGAParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(PrivugSOGAParser.T__1)
            self.state = 74
            self.symvars()
            self.state = 75
            self.match(PrivugSOGAParser.T__2)
            self.state = 76
            self.list_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(PrivugSOGAParser.NUM, 0)

        def IDV(self):
            return self.getToken(PrivugSOGAParser.IDV, 0)

        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = PrivugSOGAParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PrivugSOGAParser.T__3)
            self.state = 79
            self.match(PrivugSOGAParser.NUM)
            self.state = 80
            self.match(PrivugSOGAParser.T__4)
            self.state = 81
            self.match(PrivugSOGAParser.IDV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PrivugSOGAParser.AssignmentContext,0)


        def conditional(self):
            return self.getTypedRuleContext(PrivugSOGAParser.ConditionalContext,0)


        def prune(self):
            return self.getTypedRuleContext(PrivugSOGAParser.PruneContext,0)


        def observe(self):
            return self.getTypedRuleContext(PrivugSOGAParser.ObserveContext,0)


        def loop(self):
            return self.getTypedRuleContext(PrivugSOGAParser.LoopContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)




    def instr(self):

        localctx = PrivugSOGAParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instr)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrivugSOGAParser.T__5, PrivugSOGAParser.IDV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.assignment()
                pass
            elif token in [PrivugSOGAParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.conditional()
                pass
            elif token in [PrivugSOGAParser.T__19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.prune()
                pass
            elif token in [PrivugSOGAParser.T__21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.observe()
                pass
            elif token in [PrivugSOGAParser.T__22]:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(PrivugSOGAParser.SymvarsContext,0)


        def const(self):
            return self.getTypedRuleContext(PrivugSOGAParser.ConstContext,0)


        def add(self):
            return self.getTypedRuleContext(PrivugSOGAParser.AddContext,0)


        def mul(self):
            return self.getTypedRuleContext(PrivugSOGAParser.MulContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PrivugSOGAParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrivugSOGAParser.IDV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.symvars()
                self.state = 91
                self.match(PrivugSOGAParser.T__2)
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.const()
                    pass

                elif la_ == 2:
                    self.state = 93
                    self.add()
                    pass

                elif la_ == 3:
                    self.state = 94
                    self.mul()
                    pass


                pass
            elif token in [PrivugSOGAParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(PrivugSOGAParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.Const_termContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.Const_termContext,i)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)




    def const(self):

        localctx = PrivugSOGAParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.const_term()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 101
                    _la = self._input.LA(1)
                    if not(_la==PrivugSOGAParser.T__6 or _la==PrivugSOGAParser.T__7):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 102
                    self.const_term() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(PrivugSOGAParser.NUM)
            else:
                return self.getToken(PrivugSOGAParser.NUM, i)

        def idd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.IddContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.IddContext,i)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_const_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_term" ):
                listener.enterConst_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_term" ):
                listener.exitConst_term(self)




    def const_term(self):

        localctx = PrivugSOGAParser.Const_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrivugSOGAParser.NUM]:
                self.state = 108
                self.match(PrivugSOGAParser.NUM)
                pass
            elif token in [PrivugSOGAParser.IDV]:
                self.state = 109
                self.idd()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PrivugSOGAParser.T__8:
                self.state = 112
                self.match(PrivugSOGAParser.T__8)
                self.state = 115
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PrivugSOGAParser.NUM]:
                    self.state = 113
                    self.match(PrivugSOGAParser.NUM)
                    pass
                elif token in [PrivugSOGAParser.IDV]:
                    self.state = 114
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.Add_termContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.Add_termContext,i)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = PrivugSOGAParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.add_term()
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 120
                    _la = self._input.LA(1)
                    if not(_la==PrivugSOGAParser.T__6 or _la==PrivugSOGAParser.T__7):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 121
                    self.add_term() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PrivugSOGAParser.VarsContext,0)


        def NUM(self):
            return self.getToken(PrivugSOGAParser.NUM, 0)

        def idd(self):
            return self.getTypedRuleContext(PrivugSOGAParser.IddContext,0)


        def const_term(self):
            return self.getTypedRuleContext(PrivugSOGAParser.Const_termContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_add_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_term" ):
                listener.enterAdd_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_term" ):
                listener.exitAdd_term(self)




    def add_term(self):

        localctx = PrivugSOGAParser.Add_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_add_term)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 129
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [PrivugSOGAParser.NUM]:
                        self.state = 127
                        self.match(PrivugSOGAParser.NUM)
                        pass
                    elif token in [PrivugSOGAParser.IDV]:
                        self.state = 128
                        self.idd()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 131
                    self.match(PrivugSOGAParser.T__8)


                self.state = 134
                self.vars_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.const_term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.VarsContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.VarsContext,i)


        def NUM(self):
            return self.getToken(PrivugSOGAParser.NUM, 0)

        def idd(self):
            return self.getTypedRuleContext(PrivugSOGAParser.IddContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_mul

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)




    def mul(self):

        localctx = PrivugSOGAParser.MulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mul)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 140
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PrivugSOGAParser.NUM]:
                    self.state = 138
                    self.match(PrivugSOGAParser.NUM)
                    pass
                elif token in [PrivugSOGAParser.IDV]:
                    self.state = 139
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 142
                self.match(PrivugSOGAParser.T__8)


            self.state = 145
            self.vars_()
            self.state = 146
            self.match(PrivugSOGAParser.T__8)
            self.state = 147
            self.vars_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifclause(self):
            return self.getTypedRuleContext(PrivugSOGAParser.IfclauseContext,0)


        def elseclause(self):
            return self.getTypedRuleContext(PrivugSOGAParser.ElseclauseContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)




    def conditional(self):

        localctx = PrivugSOGAParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.ifclause()
            self.state = 150
            self.elseclause()
            self.state = 151
            self.match(PrivugSOGAParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfclauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bexpr(self):
            return self.getTypedRuleContext(PrivugSOGAParser.BexprContext,0)


        def block(self):
            return self.getTypedRuleContext(PrivugSOGAParser.BlockContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_ifclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfclause" ):
                listener.enterIfclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfclause" ):
                listener.exitIfclause(self)




    def ifclause(self):

        localctx = PrivugSOGAParser.IfclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifclause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(PrivugSOGAParser.T__10)
            self.state = 154
            self.bexpr()
            self.state = 155
            self.match(PrivugSOGAParser.T__11)
            self.state = 156
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseclauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PrivugSOGAParser.BlockContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_elseclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseclause" ):
                listener.enterElseclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseclause" ):
                listener.exitElseclause(self)




    def elseclause(self):

        localctx = PrivugSOGAParser.ElseclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elseclause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(PrivugSOGAParser.T__12)
            self.state = 159
            self.match(PrivugSOGAParser.T__11)
            self.state = 160
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrivugSOGAParser.InstrContext)
            else:
                return self.getTypedRuleContext(PrivugSOGAParser.InstrContext,i)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PrivugSOGAParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.instr()
                self.state = 163
                self.match(PrivugSOGAParser.T__0)
                self.state = 167 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrivugSOGAParser.T__5) | (1 << PrivugSOGAParser.T__10) | (1 << PrivugSOGAParser.T__19) | (1 << PrivugSOGAParser.T__21) | (1 << PrivugSOGAParser.T__22) | (1 << PrivugSOGAParser.IDV))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lexpr(self):
            return self.getTypedRuleContext(PrivugSOGAParser.LexprContext,0)


        def NUM(self):
            return self.getToken(PrivugSOGAParser.NUM, 0)

        def idd(self):
            return self.getTypedRuleContext(PrivugSOGAParser.IddContext,0)


        def symvars(self):
            return self.getTypedRuleContext(PrivugSOGAParser.SymvarsContext,0)


        def getRuleIndex(self):
            return PrivugSOGAParser.RULE_bexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexpr" ):
                listener.enterBexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexpr" ):
                listener.exitBexpr(self)




    def bexpr(self):

        localctx = PrivugSOGAParser.BexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bexpr)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.lexpr()
                self.state = 170
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrivugSOGAParser.T__13) | (1 << PrivugSOGAParser.T__14) | (1 << PrivugSOGAParser.T__15) | (1 << PrivugSOGAParser.T__16))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 173
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PrivugSOGAParser.NUM]:
                    self.state = 171
                    self.match(PrivugSOGAParser.NUM)
                    pass
                elif token in [PrivugSOGAParser.IDV]:
                    self.state = 172
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
